--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,6 +2,7 @@
   "compilerOptions": {
     "target": "es5",
     "declaration": true,
+    "lib": ["es6", "dom"],
     "outDir": "dist",
     "typeRoots": [
       "./node_modules/@types"
