--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "three-orbitcontrols-ts",
-  "version": "0.1.3",
-  "description": "ThreeJS OrbitControls as a standalone and typescript compatible npm module",
+  "name": "@avatsaev/three-orbitcontrols-ts",
+  "version": "0.1.4",
+  "description": "ThreeJS OrbitControls as a standalone and typescript compatible npm module (patched for TypeScript 2.3.4)",
   "main": "dist",
   "scripts": {
     "preversion": "npm test && ./node_modules/typescript/bin/tsc -p tsconfig.json",
@@ -9,7 +9,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/nicolaspanel/three-orbitcontrols-ts.git"
+    "url": "git+https://github.com/avatsaev/three-orbitcontrols-ts.git"
   },
   "author": "",
   "license": "MIT",
@@ -24,9 +24,9 @@
     "controller"
   ],
   "bugs": {
-    "url": "https://github.com/nicolaspanel/three-orbitcontrols-ts/issues"
+    "url": "https://github.com/avatsaev/three-orbitcontrols-ts/issues"
   },
-  "homepage": "https://github.com/nicolaspanel/three-orbitcontrols-ts#readme",
+  "homepage": "https://github.com/avatsaev/three-orbitcontrols-ts#readme",
   "dependencies": {
     "three": "^0.84"
   },
@@ -39,7 +39,7 @@
     "jsdom": "^9.9.1",
     "mocha": "^3.2.0",
     "ts-node": "^2.0.0",
-    "typescript": "^2.1.4"
+    "typescript": "^2.3.4"
   },
   "typings": "dist/index.d.ts"
 }
