add more info to npm package

--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "type": "git",
     "url": "git+https://github.com/avatsaev/three-orbitcontrols-ts.git"
   },
-  "author": "",
+  "author": "Aslan Vatsaev",
   "license": "MIT",
   "keywords": [
     "orbit",
@@ -41,5 +41,8 @@
     "ts-node": "^2.0.0",
     "typescript": "^2.3.4"
   },
-  "typings": "dist/index.d.ts"
+  "typings": "dist/index.d.ts",
+  "directories": {
+    "test": "test"
+  }
 }
