--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,6 +4,7 @@
     "declaration": true,
     "lib": ["es6", "dom"],
     "outDir": "dist",
+    "strictNullChecks": true,
     "typeRoots": [
       "./node_modules/@types"
     ]
