--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@avatsaev/three-orbitcontrols-ts",
+  "name": "zadgroup-three-orbitcontrols-ts",
   "version": "0.2.0",
   "description": "ThreeJS OrbitControls as a standalone and typescript compatible npm module (patched for TypeScript 2.3.4)",
   "main": "dist",
@@ -9,9 +9,9 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/avatsaev/three-orbitcontrols-ts.git"
+    "url": "git+https://github.com/zadgroup/three-orbitcontrols-ts.git"
   },
-  "author": "Aslan Vatsaev",
+  "author": "Amer Alsabbagh",
   "license": "MIT",
   "keywords": [
     "orbit",
@@ -24,9 +24,9 @@
     "controller"
   ],
   "bugs": {
-    "url": "https://github.com/avatsaev/three-orbitcontrols-ts/issues"
+    "url": "https://github.com/zadgroup/three-orbitcontrols-ts/issues"
   },
-  "homepage": "https://github.com/avatsaev/three-orbitcontrols-ts#readme",
+  "homepage": "https://github.com/zadgroup/three-orbitcontrols-ts#readme",
   "dependencies": {
     "three": "^0.86"
   },
